// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
.c0 {
  border: 1px solid #ddd;
  padding: 8px 16px;
  line-height: 1;
  font-size: 1rem;
  font-weight: normal;
  color: #333;
  background-color: #ddd;
  border-radius: 4px;
  cursor: pointer;
  -webkit-transition: background-color 0.25s ease;
  transition: background-color 0.25s ease;
}

.c0:hover {
  background-color: #f1f1f1;
}

<button
  className="c0"
  color="lightGrey"
>
  Button
</button>
`;

exports[`Button renders correctly with props 1`] = `
.c0 {
  border: 1px solid #ea352d;
  padding: 8px 16px;
  line-height: 1;
  font-size: 1rem;
  font-weight: bold;
  color: #fff;
  background-color: #ea352d;
  border-radius: 1rem;
  cursor: pointer;
  -webkit-transition: background-color 0.25s ease;
  transition: background-color 0.25s ease;
}

.c0:hover {
  background-color: #fe4941;
}

<button
  className="c0"
  color="primary"
>
  Button
</button>
`;
